--- a/src/app/modules/pokemon-details/pokemon-details.component.html
+++ b/src/app/modules/pokemon-details/pokemon-details.component.html
@@ -1,23 +1,75 @@
 <form>
   <div class="mb-3">
-    <label for="namePokemon" class="form-label">Name</label>
-    <input type="email" class="form-control" id="namePokemon" aria-describedby="emailHelp" [value]="pokemon==undefined?'':pokemon.name">
+    <label for="namePokemon" class="form-label text-primary">Name</label>
+    <input type="text" class="form-control" id="namePokemon" name="namePokemon" aria-describedby="emailHelp" [(ngModel)]="pokemon.name">
     <div id="emailHelp" class="form-text">The name of pokémon.</div>
   </div>
   <div class="mb-3">
-    <label for="PokemonHP" class="form-label">HP</label>
-    <input type="number" class="form-control" id="PokemonHP" aria-describedby="HPHelp" [value]="pokemon==undefined?'':pokemon.hp">
+    <label for="PokemonHP" class="form-label text-primary">HP</label>
+    <input type="number" class="form-control" id="PokemonHP" name="PokemonHP"  aria-describedby="HPHelp" [(ngModel)]="pokemon.hp">
     <div id="HpHelp" class="form-text">Its power in numbers</div>
   </div>
   <div class="mb-3">
-    <label for="PokemonCP" class="form-label">CP</label>
+    <label for="PokemonCP" class="form-label text-primary">CP</label>
     <input type="number" class="form-control" id="PokemonCP" aria-describedby="CPHelp"
       [value]="pokemon==undefined?'':pokemon.cp">
     <div id="CpHelp" class="form-text">Its combat points in numbers</div>
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Save</button>
+    <label  class="form-label text-primary">Types:</label>
+    <div class="row">
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pfire" [checked]="valcheckType('Feu')">
+          <label class="form-check-label" for="Pfire">Feu</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pwater" [checked]="valcheckType('Eau')">
+          <label class="form-check-label" for="Pwater">Eau</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pinsect" [checked]="valcheckType('Insecte')">
+          <label class="form-check-label" for="Pinsect">Insecte</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Ppoison" [checked]="valcheckType('Poison')">
+          <label class="form-check-label" for="Ppoison">Poison</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pplant" [checked]="valcheckType('Plante')">
+          <label class="form-check-label" for="Pplant">Plante</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pnormal" [checked]="valcheckType('Normal')">
+          <label class="form-check-label" for="Pnormal">Normal</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pflyer" [checked]="valcheckType('Vol')">
+          <label class="form-check-label" for="Pflyer">Vol</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pelectric" [checked]="valcheckType('Electrik')">
+          <label class="form-check-label" for="Pelectric">Electrik</label>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-2">
+        <div class="mb-3 form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="Pfairy" [checked]="valcheckType('Fée')">
+          <label class="form-check-label" for="Pfairy">Fée</label>
+        </div>
+      </div>
+    </div>
 </form>
