--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -2,10 +2,36 @@
 
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid p-4">
-        <h1 class="text-primary">Welcome to <strong>{{title}}</strong></h1>
+        <div class="d-flex align-items-center">
+          <img src="assets/favicon.png" width="85" alt="Pokémon Logo" class="me-3">
+        
+          <div class="d-flex flex-column">
+            <h1 class="text-primary mb-2">Welcome to <strong>{{title}}</strong></h1>
+            <div class="d-flex">
+              <h4 class="text-secondary">By <a class="text-secondary" href="https://github.com/CAHOCA/" target="_blank" rel="noopener noreferrer"><strong>Carlos Hortúa Calderón</strong></a> </h4>
+              <a class="btn btn-outline-dark btn-sm d-flex align-items-center gap-2 ms-3" href="https://github.com/CAHOCA/IHMtest-Pokemon"
+                target="_blank" rel="noopener noreferrer">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-github"
+                  viewBox="0 0 16 16">
+                  <path d="M8 0C3.58 0 0 3.58 0 8a8.01 8.01 0 005.47 7.59c.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2 
+                  .37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 
+                  1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.01.08-2.1 
+                  0 0 .67-.21 2.2.82a7.65 7.65 0 012-.27c.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.09.16 1.9.08 
+                  2.1.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 
+                  .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z" />
+                </svg>
+                View repo
+              </a>
+            </div>            
+          </div>
+        </div>
+        
+
         <form class="d-flex" role="search">
-          <input class="form-control me-2"  placeholder="Search pokémon" aria-label="Search" (keyup)="filterPokemon($event)">
+          <input class="form-control searchbar me-2"  placeholder="Search pokémon" aria-label="Search" (keyup)="filterPokemon($event)">
         </form>
+
+        
       </div>
     </nav>
 
