--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -20,7 +20,7 @@
                   2.1.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 
                   .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z" />
                 </svg>
-                View repo
+                View source code
               </a>
             </div>            
           </div>
