--- a/src/app/modules/pokemon-details/pokemon-details.component.html
+++ b/src/app/modules/pokemon-details/pokemon-details.component.html
@@ -13,7 +13,7 @@
 
   <div class="row g-0 align-items-center ">
       <div class="col-md-4 text-center">
-        <img [src]="pokemonForm.picture" class="img-fluid" alt="">
+        <img [src]="'assets/pokemon_img/' + pokemonForm.id + '.png'" class="img-fluid" alt="">
       </div>
       <div class="col-md-8">
         <form class="p-2">
