--- a/src/assets/font/font.scss
+++ b/src/assets/font/font.scss
@@ -1,25 +1,8 @@
 /* Nunito font */
-
-@font-face {
-    font-family: 'Nunito';
-    font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url(nunito/Nunito-MediumItalic.woff2) format('woff2');
-}
-
 @font-face {
     font-family: 'Nunito';
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500 900;
     font-display: swap;
-    src: url(nunito/Nunito-Medium.woff2) format('woff2');
-}
-
-@font-face {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 900;
-    font-display: swap;
-    src: url(nunito/Nunito-Bold.woff2) format('woff2');
+    src: url(nunito/Nunito-VariableFont_wght.woff2) format('woff2');
 }
