--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-
-
+@import "assets/font/font.scss"; 
 
 body{
   font-smooth: always;
   font-family: 'Nunito', sans-serif;
+  font-weight: 500 900;
   background-color: #f8f9fa !important;
 }
 
